--- a/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
@@ -7,6 +7,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    
+    
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Hub VerticalAlignment="Top" Height="50" Background="Yellow">
             <HubSection>
@@ -22,7 +25,7 @@
             <PasswordBox Name="PasswordBox"  MinWidth="300"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <CheckBox Name="SaveCheckBox" Content="запомнить"></CheckBox>
-                <Button Name="LaterLogIn" Content="Позже" Margin="10,0,10,0" Width="100"/>
+                <Button Name="LaterLogIn" Content="Позже" Margin="10,0,10,0" Width="100" Click="LaterLogIn_Click"/>
                 <Button Name="LoginButton" Content="Войти" Margin="10,0,0,0" Width="100" Background="Yellow" Click="LoginButton_Click"/>
             </StackPanel>
         </StackPanel>
