--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    <!-- Data for listview-->
     <Page.Resources>
         <DataTemplate x:Key="DataProfileStyleList">
             <Grid HorizontalAlignment="Center">
@@ -14,8 +14,19 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="InfoProfileListTextBlock" Text="{Binding Info}" Margin="5" FontSize="12" TextAlignment="Right" Foreground="Gray" HorizontalAlignment="Right" Grid.Column="0"></TextBlock>
-                <TextBlock x:Name="ValueProfileListTextBlock" Text="{Binding Value}" Margin="5" FontSize="12" Grid.Column="1"></TextBlock>
+                <TextBlock x:Name="InfoProfileListTextBlock" 
+                           Text="{Binding Info}" 
+                           Margin="5" 
+                           FontSize="12" 
+                           TextAlignment="Right" 
+                           Foreground="Gray" 
+                           HorizontalAlignment="Right" 
+                           Grid.Column="0"/>
+                <TextBlock x:Name="ValueProfileListTextBlock" 
+                           Text="{Binding Value}" 
+                           Margin="5" 
+                           FontSize="12" 
+                           Grid.Column="1"/>
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -63,18 +74,44 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
-        <StackPanel x:Name="stackPanelAccauntInfo" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Background="Yellow">
-            <TextBlock x:Name="AccauntNameTextBlock" Text="{Binding AccauntName}" TextAlignment="Center" Foreground="Black" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"/>
-            <Ellipse x:Name="ellipse" Width="100" Height="100" Margin="5,10,0,0" VerticalAlignment="Top" Tapped="ellipse_Tapped" >
+        <!-- Profile image-->
+        <StackPanel x:Name="stackPanelAccauntInfo" 
+                    Grid.Column="0" 
+                    Grid.Row="0" 
+                    Grid.ColumnSpan="2" 
+                    HorizontalAlignment="Stretch" 
+                    Background="Yellow">
+            <TextBlock x:Name="AccauntNameTextBlock" 
+                       Text="{Binding AccauntName}" 
+                       TextAlignment="Center" 
+                       Foreground="Black" 
+                       FontSize="18" 
+                       FontWeight="Bold" 
+                       Margin="0,10,0,0"/>
+            <Ellipse x:Name="ellipse" 
+                     Width="100" 
+                     Height="100" 
+                     Margin="5,10,0,0" 
+                     VerticalAlignment="Top" 
+                     Tapped="ellipse_Tapped" >
                 <Ellipse.Fill>
                     <ImageBrush ImageSource="{Binding Avatar}"/>
                 </Ellipse.Fill>
             </Ellipse>
-            <TextBlock x:Name="StatusProfileTextBlock" Text="{Binding Status}" TextAlignment="Center" Margin="0,10,0,0"/>
+            <TextBlock x:Name="StatusProfileTextBlock" 
+                       Text="{Binding Status}" 
+                       TextAlignment="Center" 
+                       Margin="0,10,0,0"/>
         </StackPanel>
-        <StackPanel x:Name="stackPanelAccauntInfo2" Margin="0,0,0,0" Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Stretch">
-            <ListView x:Name="DataProfileList" ItemTemplate="{StaticResource DataProfileStyleList}" HorizontalAlignment="Center">
+        <!-- Other data-->
+        <StackPanel x:Name="stackPanelAccauntInfo2" 
+                    Margin="0,0,0,0" 
+                    Grid.ColumnSpan="2" 
+                    Grid.Row="1" 
+                    HorizontalAlignment="Stretch">
+            <ListView x:Name="DataProfileList" 
+                      ItemTemplate="{StaticResource DataProfileStyleList}" 
+                      HorizontalAlignment="Center">
                 <ListBoxItem HorizontalAlignment="Center"/>
             </ListView>
         </StackPanel>
