--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -14,9 +14,10 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="InfoProfileListTextBlock" 
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <TextBlock x:Name="InfoProfileListTextBlock" 
                            Text="{Binding Info}" 
-                           Margin="5" 
+                           Margin="2" 
                            FontSize="12" 
                            TextAlignment="Right" 
                            Foreground="Gray" 
@@ -24,9 +25,11 @@
                            Grid.Column="0"/>
                 <TextBlock x:Name="ValueProfileListTextBlock" 
                            Text="{Binding Value}" 
-                           Margin="5" 
+                           Margin="2" 
                            FontSize="12" 
-                           Grid.Column="1"/>
+                           Grid.Column="1"
+                           HorizontalAlignment="Left"/>
+                </StackPanel>
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -81,37 +84,53 @@
                     Grid.ColumnSpan="2" 
                     HorizontalAlignment="Stretch" 
                     Background="Yellow">
-            <TextBlock x:Name="AccauntNameTextBlock" 
+            <StackPanel>
+                <TextBlock x:Name="AccauntNameTextBlock" 
                        Text="{Binding AccauntName}" 
                        TextAlignment="Center" 
                        Foreground="Black" 
                        FontSize="18" 
                        FontWeight="Bold" 
                        Margin="0,10,0,0"/>
-            <Ellipse x:Name="ellipse" 
+                <Ellipse x:Name="ellipse" 
                      Width="100" 
                      Height="100" 
                      Margin="5,10,0,0" 
                      VerticalAlignment="Top" 
                      Tapped="ellipse_Tapped" >
-                <Ellipse.Fill>
-                    <ImageBrush ImageSource="{Binding Avatar}"/>
-                </Ellipse.Fill>
-            </Ellipse>
-            <TextBlock x:Name="StatusProfileTextBlock" 
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="{Binding Avatar}"/>
+                    </Ellipse.Fill>
+                </Ellipse>
+                <TextBlock x:Name="StatusProfileTextBlock" 
                        Text="{Binding Status}" 
                        TextAlignment="Center" 
                        Margin="0,10,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" 
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Bottom" 
+                    Grid.ColumnSpan="2" 
+                    Margin="5" 
+                    Grid.Column="0" 
+                    Grid.Row="0">
+                <Button Content="Личное сообщение" Width="150" Height="20" FontSize="10" BorderThickness="0"/>
+                <Button Content="Выйти" Width="150" Height="20" FontSize="10" BorderThickness="0" Margin="10,0,0,0"/>
+            </StackPanel>
         </StackPanel>
+        
         <!-- Other data-->
         <StackPanel x:Name="stackPanelAccauntInfo2" 
                     Margin="0,0,0,0" 
                     Grid.ColumnSpan="2" 
                     Grid.Row="1" 
                     HorizontalAlignment="Stretch">
+            <StackPanel.DataContext>
+                <local:ProfilePataList/>
+            </StackPanel.DataContext>
             <ListView x:Name="DataProfileList" 
                       ItemTemplate="{StaticResource DataProfileStyleList}" 
-                      HorizontalAlignment="Center">
+                      HorizontalAlignment="Stretch">
                 <ListBoxItem HorizontalAlignment="Center"/>
             </ListView>
         </StackPanel>
